            Bangle.js: Fix out of bounds coordinates in LCD code that caused screen corruption on newer GCC builds (#2455)
            Bangle.js2: In flash bootloader, don't store flash write code in RAM (no need) (fix #2458)
            Remove 65535-char max native string length restriction introduced in 2v20 on devices that could support more like Bangle.js 2

     2v20 : Ensure String.charCodeAt returns NaN for out of bounds chars
            Bangle.js2: When rendering overlays, *do not* use the current FG/BG color for 1 bit overlays
            nRF52 SDK15: Fix UART when >1 central link enabled
            Bangle.js2: Allow 2 central links at once
            Fix `if (0);"test"||fail()` 2v19 regression - strings after if(0) didn't get interpreted 
            Ensure eval("1;;;")==1 - eval("1;")==1 before, but not eval("1;;")            
            Ensure AssignmentExpr returns the value of LHS, not the LHS. `(a=2)=3` now fails (as per spec)
            Ensure default args for arrow functions fail with error `(a,b=3)=>a+b` now fails (until default args get added)
            nRF52: bootloader asks for connection interval 7.5->30ms now, not just 15ms. Should improve DFU on iOS 16 which doesn't honour 15ms request
            Fix unicode in object keys when UTF8 support enabled, eg.  {'\u00e4':1}
            Bangle.js: Change order of items in the Recovery Menu (hold BTN at boot) to put more common options first
            Tidying up error messages (no trailing '.' or '\n'), making almost-similar error messages the same 
            Fix issue using `String.concat` with flash strings (fix #2268)
            jsvFindChildFromString enhancement - adds 10% performance on minified code
            Remove createChild argument from jsvFindChildFromString, add jsvFindOrAddChildFromString instead
            Add ES9 optional catch binding (`try {} catch {}`) 
            Bangle.js: Fix terminal's repeated call to '.flip' that broke double buffering on Bangle.js 1